Update for 0.2.5.